# MLib

./: CMakeLists.txt  README.md
include/: matrix.h  vector.h
src/: main.cpp
tests/: matrix_LU_factorization.cc  matrix_addition.cc  matrix_costructors.cc  matrix_determinant.cc  matrix_identity.cc  matrix_inverse.cc  matrix_multiplication.cc  matrix_operators.cc  matrix_rows_columns.cc  matrix_substitutions.cc  matrix_transpose.cc
